# brandywine

./: README.md  pyproject.toml
brandywine/: boundary_conds.py  conservative_vars.py  grid.py  inviscid_flux.py  solver.py  state_equations.py  time_schemes.py
brandywine/spatial_schemes/: _iflux_utils.py  inviscid_flux.py  lax_friedrich.py  lax_wendroff.py
brandywine/time_schemes/: runge_kutta.py  temporal_flux.py
tests/brandywine/: test_boundary_conds.py  test_conservative_vars.py  test_grid.py  test_solver.py  test_state_equations.py
tests/brandywine/spatial_schemes/: test_inviscid_flux.py
tests/brandywine/time_schemes/: test_temporal_flux.py
